# bulldozer

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  repositories.bzl
cmd/bulldozer/: BUILD.bazel  main.go
internal/cmd/bulldozer/: BUILD.bazel  bulldozer.go  start.go
internal/statemachine/: BUILD.bazel  compute.go  statemachine.go
scripts/: BUILD.bazel
