load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ericnorris/bulldozer/cmd/bulldozer",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/cmd/bulldozer:go_default_library",
        "@com_github_alecthomas_kong//:go_default_library",
    ],
)

go_binary(
    name = "bulldozer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
