load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "compute.go",
        "statemachine.go",
    ],
    importpath = "github.com/ericnorris/bulldozer/internal/statemachine",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_google_api//compute/v1:go_default_library",
    ],
)
